syntax = "proto3";

package pb;

option go_package = "github.com/heritechie/go-book-catalog/book-repo-svc/pkg/pb";

message DeleteAuthorRequest {
    string author_id = 1;
}

message DeleteAuthorResponse {
    string message = 1;
}
